[package]
name = "vst-lisp"
version = "0.0.1"
authors = ["Patrick Monaghan <0x5f.manpat@gmail.com>"]
edition = "2018"

[dependencies]
vst = "0.0.2"
log = "0.4.5"
simplelog = "0.5.3"
# voi-synth = { git = "https://github.com/manpat/voi-synth" }
voi-synth = { path = "../voi-synth" }
dirs = "1.0.5"
failure = "0.1.1"

[dependencies.conrod]
version = "0.61.1"
features = ["winit", "glium"]

[dependencies.log-panics]
version = "2.0.0"
features = ["with-backtrace"]

[lib]
name = "vstlisp"
crate-type = ["cdylib"]